corrected spacing

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ p {
   position: relative;
   z-index: 1;
   color: black;
-  padding-top: 50px;
 }
 
 .list-group-item {
@@ -262,4 +261,8 @@ body > nav {
 .navbar-toggler {
   color: black;
   opacity: 0.7;
+}
+
+#bigTitle {
+  z-index: 1;
 }
